tests/invalid/proc_param_count.fl
sum :: proc (a: i64, b: i64) -> i64 {
  
}

main :: proc () {
  a := sum(1);
}
